change dataloading & graphs for ajudicated data

--- a/analysis/sensitivity.ipynb
+++ b/analysis/sensitivity.ipynb
@@ -13,11 +13,124 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Found users: {'rachel', 'ayush', 'kelly', 'vishnesh', 'vinayak', 'anton'}\n",
-      "\n"
+      "DEBUG:matplotlib data path: C:\\Users\\heine\\AppData\\Roaming\\Python\\Python39\\site-packages\\matplotlib\\mpl-data\n",
+      "DEBUG:CONFIGDIR=C:\\Users\\heine\\.matplotlib\n",
+      "DEBUG:interactive is False\n",
+      "DEBUG:platform is win32\n",
+      "DEBUG:CACHEDIR=C:\\Users\\heine\\.matplotlib\n",
+      "DEBUG:Using fontManager instance from C:\\Users\\heine\\.matplotlib\\fontlist-v330.json\n",
+      "INFO:Loading files: ['../data/inspection_rating_annotated/batch_1_ayush.json', '../data/inspection_rating_annotated/batch_1_rachel.json', '../data/inspection_rating_annotated/batch_1_vinayak.json', '../data/inspection_rating_annotated/batch_1_vishnesh.json', '../data/inspection_rating_annotated/batch_2_ayush.json', '../data/inspection_rating_annotated/batch_2_rachel.json', '../data/inspection_rating_annotated/batch_2_vinayak.json', '../data/inspection_rating_annotated/batch_2_vishnesh.json', '../data/inspection_rating_annotated/batch_3_ayush.json', '../data/inspection_rating_annotated/batch_3_rachel.json', '../data/inspection_rating_annotated/batch_3_vishnesh.json', '../data/inspection_rating_annotated/batch_4_ayush.json']\n",
+      "\n",
+      "INFO:Found users: {'rachel', 'ayush', 'vishnesh', 'vinayak'}\n",
+      "\n",
+      "WARNING:rachel - Batch 1, HIT 1 (ID 420) has 3 deletion edits but 2 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 1, HIT 49 (ID 564) has 2 split edits but 1 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 1, HIT 52 (ID 573) has 1 split edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 1, HIT 56 (ID 585) has 4 insertion edits but 3 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 1, HIT 97 (ID 708) has 7 substitution edits but 6 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:vinayak - Batch 2, HIT 307 (ID 920) has 2 substitution edits but 1 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 2, HIT 311 (ID 931) has 4 substitution edits but 3 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 2, HIT 321 (ID 961) has 9 substitution edits but 8 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 2, HIT 373 (ID 1117) has 1 split edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:ayush - Batch 3, HIT 573 (ID 1311) has 3 reorder edits but 2 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 3, HIT 579 (ID 1324) has 1 deletion edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 3, HIT 587 (ID 1340) has 1 structure edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:Annotation doesnt exist for edit\n",
+      "WARNING:rachel - Batch 3, HIT 426 (ID 1416) has 1 deletion edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 3, HIT 475 (ID 1514) has 2 structure edits but 1 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 3, HIT 479 (ID 1522) has 2 deletion edits but 1 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:Annotation doesnt exist for edit\n",
+      "WARNING:No deletion annotation found. Skipping...\n",
+      "DEBUG:Couldn't process grammar for deletion: ['bad', '', 'no', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for deletion: ['good', 'a lot', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for deletion: ['good', 'minor', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process coreference error for deletion: ['bad', 'minor', '', 'no']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['', '', 'no', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process positive rating for substitution: ['', '', 'no', '', '']. Assuming 'somewhat'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'somewhat', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['very', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['minor', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for deletion: ['good', 'somewhat', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process coreference error for deletion: ['bad', 'minor', '', 'no']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['changes POS', '', 'positive', 'minor', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'somewhat', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['no', '', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process positive rating for substitution: ['no', '', '', '']. Assuming 'somewhat'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['no', '', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process positive rating for substitution: ['no', '', '', '']. Assuming 'somewhat'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'somewhat', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['changes clause', '', 'positive', 'minor', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['no', '', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process positive rating for substitution: ['no', '', '', '']. Assuming 'somewhat'...\n",
+      "DEBUG:Couldn't process grammar for deletion: ['trivial', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process coreference error for deletion: ['bad', 'somewhat', '', 'no']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for deletion: ['good', 'minor', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for deletion: ['good', 'minor', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for deletion: ['good', 'minor', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for deletion: ['good', 'minor', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['no', '', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process positive rating for substitution: ['no', '', '', '']. Assuming 'somewhat'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'somewhat', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for deletion: ['trivial', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for deletion: ['trivial', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for deletion: ['good', 'somewhat', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'somewhat', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process positive rating for substitution: ['changes tense', '', 'positive', '', 'no']. Assuming 'somewhat'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['no', '', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process positive rating for substitution: ['no', '', '', '']. Assuming 'somewhat'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['no', '', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process positive rating for substitution: ['no', '', '', '']. Assuming 'somewhat'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['changes grammatical number', '', 'positive', 'minor', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for deletion: ['good', 'minor', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for deletion: ['good', 'minor', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for deletion: ['trivial', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['no', '', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process positive rating for substitution: ['no', '', '', '']. Assuming 'somewhat'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['negative', '', 'minor', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process positive rating for substitution: ['negative', '', 'minor', '']. Assuming 'somewhat'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['no', '', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process positive rating for substitution: ['no', '', '', '']. Assuming 'somewhat'...\n",
+      "DEBUG:Couldn't process grammar for deletion: ['good', 'minor', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['changes tense', 'minor', 'negative', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process positive rating for substitution: ['changes tense', 'minor', 'negative', '', '']. Assuming 'somewhat'...\n",
+      "DEBUG:Couldn't process grammar for deletion: ['good', 'minor', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for deletion: ['good', 'minor', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['changes clause', '', 'positive', 'minor', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['changes POS', '', 'positive', 'minor', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['no', '', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process positive rating for substitution: ['no', '', '', '']. Assuming 'somewhat'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'somewhat', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'somewhat', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n"
      ]
     }
    ],
@@ -25,14 +138,27 @@
     "from utils.all import *\n",
     "from scipy.stats import kendalltau, pearsonr, spearmanr\n",
     "\n",
-    "data = load_data('../annotated', batch_num=[5, 6, 7, 8, 9], preprocess=True)"
+    "# data = load_data('../annotated', batch_num=[5, 6, 7, 8, 9], preprocess=True)\n",
+    "data = load_data('../data/inspection_rating_annotated', preprocess=True, adjudicated=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'comet/computed-scores.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-6dd876f2afa1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Add pre-computed scores\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'comet/computed-scores.json'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'r'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[0mscores\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mscores\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0ms\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0ms\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mscores\u001b[0m \u001b[1;32mif\u001b[0m \u001b[1;34m'bleu'\u001b[0m \u001b[1;32min\u001b[0m \u001b[0ms\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'comet/computed-scores.json'"
+     ]
+    }
+   ],
    "source": [
     "# Add pre-computed scores\n",
     "with open('comet/computed-scores.json', 'r') as f:\n",
@@ -42,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
