--- a/analysis/sensitivity.ipynb
+++ b/analysis/sensitivity.ipynb
@@ -24,7 +24,7 @@
       "DEBUG:Using fontManager instance from C:\\Users\\heine\\.matplotlib\\fontlist-v330.json\n",
       "INFO:Loading files: ['../data/inspection_rating_annotated/batch_1_ayush.json', '../data/inspection_rating_annotated/batch_1_rachel.json', '../data/inspection_rating_annotated/batch_1_vinayak.json', '../data/inspection_rating_annotated/batch_1_vishnesh.json', '../data/inspection_rating_annotated/batch_2_ayush.json', '../data/inspection_rating_annotated/batch_2_rachel.json', '../data/inspection_rating_annotated/batch_2_vinayak.json', '../data/inspection_rating_annotated/batch_2_vishnesh.json', '../data/inspection_rating_annotated/batch_3_ayush.json', '../data/inspection_rating_annotated/batch_3_rachel.json', '../data/inspection_rating_annotated/batch_3_vishnesh.json', '../data/inspection_rating_annotated/batch_4_ayush.json']\n",
       "\n",
-      "INFO:Found users: {'rachel', 'ayush', 'vishnesh', 'vinayak'}\n",
+      "INFO:Found users: {'vishnesh', 'ayush', 'rachel', 'vinayak'}\n",
       "\n",
       "WARNING:rachel - Batch 1, HIT 1 (ID 420) has 3 deletion edits but 2 annotations. Likely a missing annotation. Skipping edit type...\n",
       "WARNING:rachel - Batch 1, HIT 49 (ID 564) has 2 split edits but 1 annotations. Likely a missing annotation. Skipping edit type...\n",
@@ -146,67 +146,56 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'comet/computed-scores.json'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-6dd876f2afa1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Add pre-computed scores\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'comet/computed-scores.json'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'r'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[0mscores\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mscores\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0ms\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0ms\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mscores\u001b[0m \u001b[1;32mif\u001b[0m \u001b[1;34m'bleu'\u001b[0m \u001b[1;32min\u001b[0m \u001b[0ms\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'comet/computed-scores.json'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Add pre-computed scores\n",
-    "with open('comet/computed-scores.json', 'r') as f:\n",
+    "with open('../lens/4-scores.json', 'r') as f:\n",
     "    scores = json.load(f)\n",
     "scores = [s for s in scores if 'bleu' in s.keys()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add LENS scores\n",
-    "# path = 'comet/lens-simpeval-22.csv'\n",
-    "path = 'comet/simpeval_2022_wrescaledlens.csv'\n",
-    "with open(path, encoding='utf-8') as f:\n",
-    "    reader = csv.reader(f)\n",
-    "    keys = next(reader)\n",
-    "    contents = [row for row in reader]\n",
-    "    lens = []\n",
-    "    for sent in contents:\n",
-    "        lens += [{k: v for k, v in zip(keys, sent)}]\n",
+    "# This was with a separate computed LENS score, now we use the library\n",
+    "# # Add LENS scores\n",
+    "# # path = 'comet/lens-simpeval-22.csv'\n",
+    "# path = 'comet/simpeval_2022_wrescaledlens.csv'\n",
+    "# with open(path, encoding='utf-8') as f:\n",
+    "#     reader = csv.reader(f)\n",
+    "#     keys = next(reader)\n",
+    "#     contents = [row for row in reader]\n",
+    "#     lens = []\n",
+    "#     for sent in contents:\n",
+    "#         lens += [{k: v for k, v in zip(keys, sent)}]\n",
     "\n",
-    "for score in scores:\n",
-    "    # Ensure both the system and sentence is the same\n",
-    "    aligned = [sent for sent in lens if \n",
-    "        sent['original'] == score['original'] and\n",
-    "        sent['system'] in score['system']\n",
-    "    ]\n",
+    "# for score in scores:\n",
+    "#     # Ensure both the system and sentence is the same\n",
+    "#     aligned = [sent for sent in lens if \n",
+    "#         sent['original'] == score['original'] and\n",
+    "#         sent['system'] in score['system']\n",
+    "#     ]\n",
     "\n",
-    "    if len(aligned) == 0 or 'LENS' not in aligned[0].keys():\n",
-    "        score['lens'] = 0\n",
-    "        continue\n",
+    "#     if len(aligned) == 0 or 'LENS' not in aligned[0].keys():\n",
+    "#         score['lens'] = 0\n",
+    "#         continue\n",
     "\n",
-    "    lens_score = float(aligned[0]['LENS'])\n",
-    "    score['lens'] = lens_score"
+    "#     lens_score = float(aligned[0]['LENS'])\n",
+    "#     score['lens'] = lens_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "806"
+       "1152"
       ]
      },
      "execution_count": 4,
@@ -215,20 +204,19 @@
     }
    ],
    "source": [
-    "# NEED TO REDO THE BELOW - Should have ~818 scores\n",
     "len(scores)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating sensitivity with scores for 806 sentences\n"
+      "Calculating sensitivity with scores for 1152 sentences\n"
      ]
     }
    ],
@@ -245,6 +233,11 @@
     "    'error', \n",
     "    'all'\n",
     "]\n",
+    "\n",
+    "for s in scores:\n",
+    "    s['system'] = s['system'] \\\n",
+    "        .replace('simpeval-22', 'new-wiki-1') \\\n",
+    "        .replace('simpeval-ext', 'new-wiki-1')\n",
     "\n",
     "# Create a scores list with references and simplifications\n",
     "our_scores = []\n",
@@ -278,7 +271,7 @@
     "\n",
     "        our_scores += [n_score]\n",
     "\n",
-    "print(f\"Calculating sensitivity with scores for {len(scores)} sentences\")"
+    "print(f\"Calculating sensitivity with scores for {len(our_scores)} sentences\")"
    ]
   },
   {
@@ -291,17 +284,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "scores = our_scores\n",
+    "scores = our_scores.copy()\n",
     "scores = [s for s in scores if 'comet' in s.keys()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,24 +313,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\\multirow{3}{*}{\\rotatebox[origin=c]{90}{Quality}} & Lexical & -0.289 & -0.040 & -0.096 & \\underline{0.061} & \\textbf{0.446} \\tabularnewline\n",
-      "& Syntax & -0.247 & \\underline{0.063} & -0.063 & -0.084 & \\textbf{0.434} \\tabularnewline\n",
-      "& Conceptual & -0.183 & 0.020 & -0.117 & \\underline{0.091} & \\textbf{0.217} \\tabularnewline\n",
+      "\\multirow{3}{*}{\\rotatebox[origin=c]{90}{Quality}} & Lexical & -0.253 & \\underline{0.045} & -0.081 & -0.020 & \\textbf{0.310} \\tabularnewline\n",
+      "& Syntax & -0.218 & \\underline{0.045} & -0.109 & -0.103 & \\textbf{0.210} \\tabularnewline\n",
+      "& Conceptual & \\textbf{0.043} & -0.043 & -0.114 & -0.129 & -0.005 \\tabularnewline\n",
       "\\midrule\n",
-      "\\multirow{3}{*}{\\rotatebox[origin=c]{90}{Error}} & Lexical & -0.300 & -0.189 & -0.109 & 0.042 & \\textbf{0.055} \\tabularnewline\n",
-      "& Syntax & -0.169 & -0.112 & -0.104 & \\underline{-0.035} & \\textbf{0.053} \\tabularnewline\n",
-      "& Conceptual & -0.142 & -0.139 & -0.250 & \\underline{-0.126} & \\textbf{0.137} \\tabularnewline\n",
+      "\\multirow{3}{*}{\\rotatebox[origin=c]{90}{Error}} & Lexical & -0.206 & -0.091 & -0.006 & \\textbf{0.088} & \\underline{-0.004} \\tabularnewline\n",
+      "& Syntax & \\underline{0.174} & 0.070 & \\textbf{0.188} & 0.128 & 0.036 \\tabularnewline\n",
+      "& Conceptual & 0.101 & 0.097 & \\textbf{0.284} & \\underline{0.275} & -0.126 \\tabularnewline\n",
       "\\midrule\n",
-      "\\multirow{3}{*}{\\rotatebox[origin=c]{90}{All}} & All Error & -0.310 & -0.228 & -0.334 & \\underline{-0.119} & \\textbf{0.180} \\tabularnewline\n",
-      "& All Quality & -0.351 & -0.020 & -0.189 & \\underline{0.060} & \\textbf{0.475} \\tabularnewline\n",
-      "& All Edits & -0.247 & 0.034 & -0.070 & \\underline{0.083} & \\textbf{0.397} \\tabularnewline\n",
+      "\\multirow{3}{*}{\\rotatebox[origin=c]{90}{All}} & All Error & 0.011 & 0.039 & \\underline{0.190} & \\textbf{0.238} & -0.032 \\tabularnewline\n",
+      "& All Quality & -0.284 & \\underline{0.048} & -0.086 & -0.066 & \\textbf{0.283} \\tabularnewline\n",
+      "& All Edits & -0.266 & \\underline{-0.014} & -0.225 & -0.215 & \\textbf{0.294} \\tabularnewline\n",
       "\n"
      ]
     }
@@ -401,12 +394,15 @@
     "        # line += f'{p} & {sp} & '\n",
     "        line += f'{p} & '\n",
     "    out += line[:-2] + '\\\\tabularnewline\\n'\n",
-    "print(out)"
+    "print(out)\n",
+    "\n",
+    "import pyperclip\n",
+    "pyperclip.copy(out)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
