--- a/analysis/agreement.ipynb
+++ b/analysis/agreement.ipynb
@@ -2,43 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:Loading files: ['../data/inspection_annotated/batch_1_ayush.json', '../data/inspection_annotated/batch_1_rachel.json', '../data/inspection_annotated/batch_1_vinayak.json', '../data/inspection_annotated/batch_1_vishnesh.json', '../data/inspection_annotated/batch_2_ayush.json', '../data/inspection_annotated/batch_2_rachel.json', '../data/inspection_annotated/batch_2_vinayak.json', '../data/inspection_annotated/batch_2_vishnesh.json']\n",
-      "\n",
-      "INFO:Found users: {'vinayak', 'ayush', 'rachel', 'vishnesh'}\n",
+      "INFO:Loading files: ['../data/inspection_rating_annotated/batch_1_ayush.json', '../data/inspection_rating_annotated/batch_1_rachel.json', '../data/inspection_rating_annotated/batch_1_vinayak.json', '../data/inspection_rating_annotated/batch_1_vishnesh.json', '../data/inspection_rating_annotated/batch_2_ayush.json', '../data/inspection_rating_annotated/batch_2_rachel.json', '../data/inspection_rating_annotated/batch_2_vinayak.json', '../data/inspection_rating_annotated/batch_2_vishnesh.json', '../data/inspection_rating_annotated/batch_3_ayush.json', '../data/inspection_rating_annotated/batch_3_rachel.json', '../data/inspection_rating_annotated/batch_3_vishnesh.json', '../data/inspection_rating_annotated/batch_4_ayush.json', '../data/inspection_rating_annotated/batch_4_rachel.json', '../data/inspection_rating_annotated/batch_4_vishnesh.json']\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    },
-    {
-     "ename": "Exception",
-     "evalue": "When processing sentence: ayush - Batch 1, HIT 1 (ID 0). Caught error on: Could not process edit: {'type': 'deletion', 'id': 0, 'original_span': [(92, 95)], 'simplified_span': None, 'annotation': None, 'token_length': 1}. Skipping...",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\heine\\Documents\\research\\ts-annotation-tool\\analysis\\utils\\dataloader.py\u001b[0m in \u001b[0;36mconsolidate_annotations\u001b[1;34m(data)\u001b[0m\n\u001b[0;32m    437\u001b[0m             \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 438\u001b[1;33m                 \u001b[0mprocessed\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprocess_annotation\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0medit\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    439\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\heine\\Documents\\research\\ts-annotation-tool\\analysis\\utils\\dataloader.py\u001b[0m in \u001b[0;36mprocess_annotation\u001b[1;34m(edit)\u001b[0m\n\u001b[0;32m    348\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mraw_annotation\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m''\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mraw_annotation\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 349\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'Could not process edit: {edit}'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    350\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mException\u001b[0m: Could not process edit: {'type': 'deletion', 'id': 0, 'original_span': [(92, 95)], 'simplified_span': None, 'annotation': None, 'token_length': 1}",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-8-2a86e14d9583>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# data = load_data('../annotated', batch_num=[5, 6, 7, 8, 9, 10, 11], preprocess=True) # batch_num=1,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;31m# data = load_data('../data/inspection_rating_annotated', preprocess=True, adjudicated=True)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mload_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'../data/inspection_annotated'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpreprocess\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0madjudicated\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mspans_only\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mc:\\Users\\heine\\Documents\\research\\ts-annotation-tool\\analysis\\utils\\dataloader.py\u001b[0m in \u001b[0;36mload_data\u001b[1;34m(path, batch_num, preprocess, realign_ids, adjudicated, spans_only)\u001b[0m\n\u001b[0;32m    644\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    645\u001b[0m             \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mconsolidate_edits\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mspans_only\u001b[0m\u001b[1;33m)\u001b[0m        \u001b[1;31m# Adds 'edits' field\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 646\u001b[1;33m             \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mconsolidate_annotations\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m              \u001b[1;31m# Adds 'processed_annotations' field\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    647\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    648\u001b[0m             \u001b[1;31m# At the very primitive level, weirdly split edits do NOT add an ambiguous None field\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\heine\\Documents\\research\\ts-annotation-tool\\analysis\\utils\\dataloader.py\u001b[0m in \u001b[0;36mconsolidate_annotations\u001b[1;34m(data)\u001b[0m\n\u001b[0;32m    439\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    440\u001b[0m                 \u001b[1;31m# log.error(f'When processing sentence: {get_sent_info(sent)}. Caught error on: {e}. Skipping...')\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 441\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'When processing sentence: {get_sent_info(sent)}. Caught error on: {e}. Skipping...'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    442\u001b[0m                 \u001b[0msuccessful\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    443\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mException\u001b[0m: When processing sentence: ayush - Batch 1, HIT 1 (ID 0). Caught error on: Could not process edit: {'type': 'deletion', 'id': 0, 'original_span': [(92, 95)], 'simplified_span': None, 'annotation': None, 'token_length': 1}. Skipping..."
      ]
     }
    ],
@@ -48,8 +20,8 @@
     "\n",
     "from utils.all import *\n",
     "# data = load_data('../annotated', batch_num=[5, 6, 7, 8, 9, 10, 11], preprocess=True) # batch_num=1,\n",
-    "# data = load_data('../data/inspection_rating_annotated', preprocess=True, adjudicated=True)\n",
-    "data = load_data('../data/inspection_annotated', preprocess=True, adjudicated=True, spans_only=True)"
+    "data = load_data('../data/inspection_rating_annotated', preprocess=True, adjudicated=True)\n",
+    "# data = load_data('../data/inspection_annotated', preprocess=True, adjudicated=True, spans_only=True)"
    ]
   },
   {
