--- a/data/yao/assign_annotators_to_batches_new-wiki-4.ipynb
+++ b/data/yao/assign_annotators_to_batches_new-wiki-4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "\n",
     "random.seed(2)\n",
     "\n",
-    "which_wiki = 3\n",
+    "which_wiki = 4\n",
     "\n",
     "# Read in the data\n",
     "df = pd.read_csv(f'all-outputs-new-wiki-{which_wiki}.csv')"
@@ -21,46 +21,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vishnesh 21\n",
-      "rachel 21\n",
-      "ayush 22\n",
-      "kelly 22\n",
-      "anton 13\n",
-      "vinayak 21\n"
+      "10\n",
+      "10\n",
+      "10\n",
+      "10\n"
      ]
     }
    ],
    "source": [
-    "annotater_dict = json.load(open('annotater_dict-new-wiki-1.json'))\n",
+    "import random\n",
     "\n",
-    "# Subtract 2\n",
-    "for k, v in annotater_dict.items():\n",
-    "    annotater_dict[k] = [n - 2 for n in annotater_dict[k]]\n",
+    "def pairwise(annotators):\n",
+    "    pairs = []\n",
+    "    n = len(annotators)\n",
+    "    for i in range(n):\n",
+    "        for j in range(i+1, n):\n",
+    "            pairs.append((annotators[i], annotators[j]))\n",
+    "    return pairs\n",
     "\n",
-    "id_dict = {str(i): [val for val in annotater_dict.keys() if i in annotater_dict[val]] for i in range(len(df))}\n",
+    "def assign_tasks(task_ids):\n",
+    "    annotators = ['vishnesh', 'ayush', 'vinayak', 'rachel']\n",
+    "    assignments = {annotator: [] for annotator in annotators}\n",
+    "    annotator_pairs = pairwise(annotators)\n",
+    "    random.seed(2)\n",
+    "    random.shuffle(task_ids)\n",
     "\n",
-    "# print length of each annotater's list\n",
-    "for annotater in annotater_dict:\n",
-    "    print(annotater, len(annotater_dict[annotater]))"
+    "    for i, task_id in enumerate(task_ids):\n",
+    "        first_annotator, second_annotator = annotator_pairs[i % len(annotator_pairs)]\n",
+    "        assignments[first_annotator].append(task_id)\n",
+    "        assignments[second_annotator].append(task_id)\n",
+    "\n",
+    "    return assignments\n",
+    "\n",
+    "task_ids = list(range(20))\n",
+    "assignments = assign_tasks(task_ids)\n",
+    "# sort the value\n",
+    "assignments = {k: sorted(v) for k, v in assignments.items()}\n",
+    "\n",
+    "annotater_dict = {\n",
+    "    \"vishnesh\": [0, 1, 2, 3, 6, 7, 10, 13, 16, 17],\n",
+    "    \"ayush\": [2, 5, 7, 8, 9, 10, 11, 13, 14, 19],\n",
+    "    \"vinayak\": [0, 1, 4, 5, 6, 8, 9, 12, 15, 18],\n",
+    "    \"rachel\": [3, 4, 11, 12, 14, 15, 16, 17, 18, 19],\n",
+    "}\n",
+    "\n",
+    "# print len of each annotator's batch\n",
+    "for annotator in annotater_dict:\n",
+    "    print(len(annotater_dict[annotator]))\n",
+    "\n",
+    "# shuffle the annotator's batch\n",
+    "for annotator in annotater_dict:\n",
+    "    random.seed(2)\n",
+    "    random.shuffle(annotater_dict[annotator])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "split_idx = 75\n",
     "\n",
     "# Human 1 Writing,Human 1,Human 2 Writing,Human 2,GPT-3-zero-shot,GPT-3-few-shot,Muss,T5-3B,T5-11B\n",
-    "system_list = [\"Human 1 Writing\", \"Human 2 Writing\", \"GPT-3-zero-shot\", \"GPT-3-few-shot\", \"Muss\", \"T5-3B\", \"T5-11B\"]\n",
+    "system_list = [\"Davinci-003\", \"Turbo\", \"GPT-4\", \"Alpaca-7b\", \"Vicuna-7b\"]\n",
     "for annotater in annotater_dict:\n",
     "    annotater_batch = []\n",
     "    start_id = 0\n",
@@ -91,25 +122,14 @@
     "            annotater_batch += [current_dict]\n",
     "            start_id += 1\n",
     "\n",
-    "    # split annotater_batch into 2 batches first 40 and last 35\n",
-    "    annotater_batch_1 = annotater_batch[:split_idx]\n",
-    "    annotater_batch_2 = annotater_batch[split_idx:]\n",
-    "\n",
-    "    with open(f\"../batches/new-wiki-{which_wiki}/part1/{annotater}.json\", \"w\") as f:\n",
-    "        json.dump(annotater_batch_1, f, indent=4)\n",
-    "\n",
-    "    # reindex annotater_batch_2's id from 0\n",
-    "    for i, item in enumerate(annotater_batch_2):\n",
-    "        item[\"id\"] = i\n",
-    "\n",
-    "    with open(f\"../batches/new-wiki-{which_wiki}/part2/{annotater}.json\", \"w\") as f:\n",
-    "        json.dump(annotater_batch_2, f, indent=4)"
+    "    with open(f\"../batches/new-wiki-{which_wiki}/{annotater}.json\", \"w\") as f:\n",
+    "        json.dump(annotater_batch, f, indent=4)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.11 64-bit",
+   "display_name": "Python 3.9.13 ('paraphrase')",
    "language": "python",
    "name": "python3"
   },
@@ -123,12 +143,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "7e1998ff7f8aa20ada591c520b972326324e5ea05489af9e422744c7c09f6dad"
+    "hash": "51d4b053945bb951b16f24566ff3322f1cf2f2e71937c6e2fa134fa8352168a0"
    }
   }
  },
